--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vladimir Borovikov - Portfolio</title>
   </head>
-  <body class="font-anonymous-pro bg-white text-black dark:bg-[rgb(32,33,36)] dark:text-[#eee]">
+  <body
+    class="font-anonymous-pro bg-white text-black dark:bg-[rgb(32,33,36)] dark:text-[#eee]"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
