--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preload" as="image" href="/assets/vladimir_borovikov_with_laptop-00KgHiAg.png" />
+    <link
+      rel="preload"
+      as="image"
+      href="/assets/vladimir_borovikov_with_laptop-00KgHiAg.png"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>Vladimir Borovikov - Portfolio</title>
